--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akanta-palo/acuo.git"
+    "url": "https://github.com/AcuoFS/acuo-ui.git"
   },
   "keywords": [
     "acuo"
@@ -22,9 +22,9 @@
   "author": "ACUO",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/akanta-palo/acuo/issues"
+    "url": "https://github.com/AcuoFS/acuo-ui/issues"
   },
-  "homepage": "https://github.com/akanta-palo/acuo#readme",
+  "homepage": "https://github.com/AcuoFS/acuo-ui",
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
