--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --hot --inline",
     "test": "mocha --compilers js:babel-core/register --require mock-css-modules --harmony-proxies ./test/test_helper.js 'test/**/*.@(js)'",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "json-server": "node mock-api/server.js"
   },
   "babel": {
     "presets": [
@@ -37,6 +38,7 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "jsdom": "^9.8.0",
+    "json-server": "^0.8.22",
     "mocha": "^3.1.2",
     "mock-css-modules": "^1.0.0",
     "react-addons-test-utils": "^15.3.2",
