--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
     "whatwg-fetch": "^1.0.0"
   }
