--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash": "^4.17.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-dropzone-component": "^1.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
