--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.16.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
