--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
     "react-dropzone-component": "^1.2.1",
     "react-redux": "^4.4.5",
