--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
     "react": "^15.3.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.2",
     "react-dropzone-component": "^1.2.1",
     "react-redux": "^4.4.5",
