--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "css-loader": "^0.25.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^3.0.0",
+    "image-webpack-loader": "3.1.0",
     "imports-loader": "^0.6.5",
     "jsdom": "^9.8.0",
     "json-server": "^0.8.22",
