--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.28.0",
+    "imports-loader": "^0.7.1",
     "jsdom": "^9.8.0",
     "json-server": "^0.8.22",
     "mocha": "^3.1.2",
