--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "webpack-dev-server": "^2.0.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
     "react": "^15.3.2",
