--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
     "react-dropzone-component": "^1.2.1",
+    "react-notification-system": "^0.2.14",
+    "react-notification-system-redux": "^1.1.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
     "react-select": "^1.0.0-rc.3",
