--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-polyfill": "^6.23.0",
     "immutable": "^3.8.1",
     "lodash": "^4.17.2",
+    "prop-types": "^15.5.10",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
