--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.4",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^1.0.0",
+    "json-configurator": "^1.0.1"
   }
 }
