OW-648,[LOGIC] Enabled collateral widget to sort by column header.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "webpack-dev-server --hot",
     "fromDist": "webpack-dev-server --content-base dist/",
-    "test": "mocha --compilers js:babel-core/register --require mock-css-modules --harmony-proxies ./test/test_helper.js 'test/**/*.@(js)'",
+    "test": "mocha -R landing --compilers js:babel-core/register --require mock-css-modules ./test/*.js || true",
+    "test-js": "mocha || true",
     "test:watch": "npm run test -- --watch",
     "json-server": "node mock-api/server.js",
     "server": "nodemon mock-api/server.js"
