--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "d3": "^4.10.0",
     "immutable": "^3.8.1",
+    "json-configurator": "^1.0.1",
     "lodash": "^4.17.2",
     "prop-types": "^15.5.10",
     "react": "^15.3.2",
@@ -75,7 +77,6 @@
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.4",
-    "whatwg-fetch": "^1.0.0",
-    "json-configurator": "^1.0.1"
+    "whatwg-fetch": "^1.0.0"
   }
 }
