--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test-js": "mocha || true",
     "test:watch": "npm run test -- --watch",
     "json-server": "node mock-api/server.js",
-    "server": "nodemon mock-api/server.js"
+    "server": "nodemon mock-api/server.js",
+    "start": "webpack-dev-server --hot"
   },
   "babel": {
     "presets": [
