--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.4",
+    "socket.io-client": "^2.0.4",
     "whatwg-fetch": "^1.0.0"
   }
 }
