--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "babel-polyfill": "^6.23.0",
     "d3": "^4.10.0",
+    "es6-promise": "^4.2.2",
     "immutable": "^3.8.1",
     "json-configurator": "^1.0.1",
     "lodash": "^4.17.2",
