--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "webpack-dev-server": "^2.0.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.23.0",
     "d3": "^4.10.0",
     "es6-promise": "^4.2.2",
